# kbot

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  build.sh  compile_commands.json
.github/workflows/: kbot.yml
include/: epoll.hh  irc.hh  log.hh  loop.hh  server.hh
plugins/: Plugin.hh  Version.cc
src/: Database.cc  Database.hh  Epoll.cc  Epoll.hh  IRC.cc  IRC.hh  Manager.cc  Manager.hh  Server.cc  Server.hh  UserCommand.cc  UserCommand.hh  channel.hh  epoll.cc  irc.cc  irc.hh  loop.cc  loop.hh  main.cc  server.cc  server.hh
src/include/: channel.hh  irc.hh  loop.hh  server.hh
src/staging/: Util.hh
src/tests/: test_irc_message.cc  test_stack_ptr.cc
